@@ -245,11 +245,11 @@ def ldif_mailuser(domain, username, passwd, cn, quota, groups=''):
         ('enabledService',      ['internal', 'doveadm', 'lib-storage', 'indexer-worker', 'dsync',
                                  'mail', 'smtp', 'smtpsecured',
                                  'pop3', 'pop3secured', 'imap', 'imapsecured',
-                                'deliver', 'lda', 'forward', 'senderbcc', 'recipientbcc',
+                                 'deliver', 'lda', 'forward', 'senderbcc', 'recipientbcc',
                                  'managesieve', 'managesievesecured',
-                                 'sieve', 'sievesecured', 'lmtp',
+                                 'sieve', 'sievesecured', 'lmtp', 'sogo',
                                  'shadowaddress',
-                                'displayedInGlobalAddressBook']),
+                                 'displayedInGlobalAddressBook']),
         ('memberOfGroup',       groups),
         # shadowAccount integration.
         ('shadowLastChange', ['0']),
