@@ -1,5 +1,8 @@
 iRedMail-0.9.5:
     * Improvements:
+        + Able to enable/disable sogo service for a single user with new SQL
+          column `mailbox.enablesogo` and LDAP attribute/value
+          `enabledService=sogo`.
         + Supports Postfix parameter `sender_dependent_relayhost_maps`.
 
     * Fixed issues:
